--- a/public/themes/bootstrap4-light-purple/theme.css
+++ b/public/themes/bootstrap4-light-purple/theme.css
@@ -3261,14 +3261,16 @@
   background: #e9ecef;
   color: #212529;
 }
-.p-orderlist .p-orderlist-list .p-orderlist-item:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem rgba(136, 60, 174, 0.5);
+.p-orderlist .p-orderlist-list .p-orderlist-item.p-focus {
+  color: #212529;
+  background: #dee2e6;
 }
 .p-orderlist .p-orderlist-list .p-orderlist-item.p-highlight {
-  color: #ffffff;
-  background: #883cae;
+  color: #212529;
+  background: #e9ecef;
+}
+.p-orderlist .p-orderlist-list .p-orderlist-item.p-highlight.p-focus {
+  background: #e9ecef;
 }
 .p-orderlist.p-orderlist-striped .p-orderlist-list .p-orderlist-item:nth-child(even) {
   background: rgba(0, 0, 0, 0.05);
