--- a/public/themes/fluent-light/theme.css
+++ b/public/themes/fluent-light/theme.css
@@ -3249,14 +3249,16 @@
   background: #f3f2f1;
   color: #323130;
 }
-.p-orderlist .p-orderlist-list .p-orderlist-item:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #605e5c;
+.p-orderlist .p-orderlist-list .p-orderlist-item.p-focus {
+  color: #323130;
+  background: #e1dfdd;
 }
 .p-orderlist .p-orderlist-list .p-orderlist-item.p-highlight {
   color: #323130;
   background: #edebe9;
+}
+.p-orderlist .p-orderlist-list .p-orderlist-item.p-highlight.p-focus {
+  background: #e1dfdd;
 }
 .p-orderlist.p-orderlist-striped .p-orderlist-list .p-orderlist-item:nth-child(even) {
   background: #faf9f8;
