--- a/public/themes/luna-amber/theme.css
+++ b/public/themes/luna-amber/theme.css
@@ -3261,13 +3261,15 @@
   background: #4c4c4c;
   color: #dedede;
 }
-.p-orderlist .p-orderlist-list .p-orderlist-item:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem white;
+.p-orderlist .p-orderlist-list .p-orderlist-item.p-focus {
+  color: #dedede;
+  background: #3c3c3c;
 }
 .p-orderlist .p-orderlist-list .p-orderlist-item.p-highlight {
   color: #212529;
+  background: #FFE082;
+}
+.p-orderlist .p-orderlist-list .p-orderlist-item.p-highlight.p-focus {
   background: #FFE082;
 }
 .p-orderlist.p-orderlist-striped .p-orderlist-list .p-orderlist-item:nth-child(even) {
