--- a/public/themes/rhea/theme.css
+++ b/public/themes/rhea/theme.css
@@ -3249,14 +3249,16 @@
   background: #f4f4f4;
   color: #666666;
 }
-.p-orderlist .p-orderlist-list .p-orderlist-item:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #e4e9ec;
+.p-orderlist .p-orderlist-list .p-orderlist-item.p-focus {
+  color: #666666;
+  background: #e0e0e0;
 }
 .p-orderlist .p-orderlist-list .p-orderlist-item.p-highlight {
-  color: #385048;
-  background: #AFD3C8;
+  color: #666666;
+  background: #eaeaea;
+}
+.p-orderlist .p-orderlist-list .p-orderlist-item.p-highlight.p-focus {
+  background: #eaeaea;
 }
 .p-orderlist.p-orderlist-striped .p-orderlist-list .p-orderlist-item:nth-child(even) {
   background: #f8f8f8;
