--- a/public/themes/tailwind-light/theme.css
+++ b/public/themes/tailwind-light/theme.css
@@ -3284,14 +3284,16 @@
   background: #f4f4f5;
   color: #18181B;
 }
-.p-orderlist .p-orderlist-list .p-orderlist-item:focus {
-  outline: 0 none;
-  outline-offset: 0;
-  box-shadow: inset 0 0 0 0.15rem #6366F1;
+.p-orderlist .p-orderlist-list .p-orderlist-item.p-focus {
+  color: #18181B;
+  background: #e5e7eb;
 }
 .p-orderlist .p-orderlist-list .p-orderlist-item.p-highlight {
-  color: #312E81;
-  background: #EEF2FF;
+  color: #3f3f46;
+  background: #f4f4f5;
+}
+.p-orderlist .p-orderlist-list .p-orderlist-item.p-highlight.p-focus {
+  background: #f4f4f5;
 }
 .p-orderlist.p-orderlist-striped .p-orderlist-list .p-orderlist-item:nth-child(even) {
   background: #fcfcfc;
