--- a/public/themes/mdc-light-indigo/theme.css
+++ b/public/themes/mdc-light-indigo/theme.css
@@ -4431,6 +4431,7 @@
   border-radius: 0;
 }
 .p-contextmenu .p-menuitem > .p-menuitem-content .p-menuitem-link {
+  color: rgba(0, 0, 0, 0.87);
   padding: 0.75rem 0.75rem;
   user-select: none;
 }
@@ -4570,6 +4571,7 @@
   border-radius: 0;
 }
 .p-megamenu .p-menuitem > .p-menuitem-content .p-menuitem-link {
+  color: rgba(0, 0, 0, 0.87);
   padding: 0.75rem 0.75rem;
   user-select: none;
 }
@@ -4688,6 +4690,7 @@
   border-radius: 0;
 }
 .p-menu .p-menuitem > .p-menuitem-content .p-menuitem-link {
+  color: rgba(0, 0, 0, 0.87);
   padding: 0.75rem 0.75rem;
   user-select: none;
 }
@@ -4799,6 +4802,7 @@
   border-radius: 0;
 }
 .p-menubar .p-menuitem > .p-menuitem-content .p-menuitem-link {
+  color: rgba(0, 0, 0, 0.87);
   padding: 0.75rem 0.75rem;
   user-select: none;
 }
@@ -4959,6 +4963,7 @@
   transition: none;
 }
 .p-panelmenu .p-panelmenu-header .p-panelmenu-header-content .p-panelmenu-header-action {
+  color: rgba(0, 0, 0, 0.87);
   padding: 1.25rem;
   font-weight: 400;
 }
@@ -5011,6 +5016,7 @@
   border-radius: 0;
 }
 .p-panelmenu .p-panelmenu-content .p-menuitem > .p-menuitem-content .p-menuitem-link {
+  color: rgba(0, 0, 0, 0.87);
   padding: 0.75rem 0.75rem;
   user-select: none;
 }
@@ -5208,6 +5214,7 @@
   border-radius: 0;
 }
 .p-tieredmenu .p-menuitem > .p-menuitem-content .p-menuitem-link {
+  color: rgba(0, 0, 0, 0.87);
   padding: 0.75rem 0.75rem;
   user-select: none;
 }
