--- a/public/themes/md-dark-indigo/theme.css
+++ b/public/themes/md-dark-indigo/theme.css
@@ -6775,6 +6775,7 @@
 }
 
 .p-float-label input:focus ~ label,
+.p-float-label textarea:focus ~ label,
 .p-float-label .p-inputwrapper-focus ~ label {
   color: #9FA8DA;
 }
@@ -7428,11 +7429,11 @@
   transition: 500ms cubic-bezier(0.35, 0, 0.25, 1);
 }
 
-.p-togglebutton.p-button:focus {
+.p-togglebutton.p-button:not(.p-disabled).p-focus {
   background: #1c1c1c;
   border-color: rgba(255, 255, 255, 0.12);
 }
-.p-togglebutton.p-button:focus.p-highlight {
+.p-togglebutton.p-button:not(.p-disabled).p-focus.p-highlight {
   background: #262626;
   border-color: rgba(255, 255, 255, 0.12);
 }
