--- a/public/themes/mdc-light-indigo/theme.css
+++ b/public/themes/mdc-light-indigo/theme.css
@@ -6775,6 +6775,7 @@
 }
 
 .p-float-label input:focus ~ label,
+.p-float-label textarea:focus ~ label,
 .p-float-label .p-inputwrapper-focus ~ label {
   color: #3F51B5;
 }
@@ -7428,11 +7429,11 @@
   transition: 500ms cubic-bezier(0.35, 0, 0.25, 1);
 }
 
-.p-togglebutton.p-button:focus {
+.p-togglebutton.p-button:not(.p-disabled).p-focus {
   background: #e0e0e1;
   border-color: #e0e0e1;
 }
-.p-togglebutton.p-button:focus.p-highlight {
+.p-togglebutton.p-button:not(.p-disabled).p-focus.p-highlight {
   background: #d9d8d9;
   border-color: #d9d8d9;
 }
