--- a/assets/styles/layout/_responsive.scss
+++ b/assets/styles/layout/_responsive.scss
@@ -20,9 +20,12 @@
                 display: flex;
             }
 
-            .DocSearch-Button {
-                margin-right: 0;
+            #docsearch {
                 margin-left: auto;
+                margin-right: .5rem;
+            }
+
+            .DocSearch-Button {
                 width: 2rem;
                 height: 2rem;
                 overflow: hidden;
