--- a/assets/styles/layout/landing/_designer.scss
+++ b/assets/styles/layout/landing/_designer.scss
@@ -90,6 +90,7 @@
             .p-listbox-list .p-listbox-item.p-highlight {
                 background-color: transparent;
                 box-shadow: inset 0 0 0 0.15rem var(--dd-primary);
+                color: var(--text-color);
             }
         }
 
